--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <!-- end Icon -->
-    <title>Welcome To Webhosting</title>
+    <title>Welcome To Web Hosting</title>
   </head>
   <body>
 
